# rust-backend-egitim-serisi

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  project.rs  role.rs  task.rs  user.rs  user_role.rs
migration/src/: lib.rs  m20251013_110140_role.rs  m20251013_110704_project.rs  m20251013_110935_user.rs  m20251013_112146_task.rs  m20251013_113439_user_role.rs
src/: main.rs
src/config/: config.rs
src/handler/: mod.rs  project_handler.rs  role_handler.rs
src/models/: mod.rs  project_models.rs  response.rs  role_models.rs
src/routes/: mod.rs  projects.rs  roles.rs
