[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "entity"}
actix-web = "4.11.0"
dotenv = "0.15.0"
sea-orm = { version = "2.0.0-rc.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
chrono = "0.4.42"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }